This file list changes done in each version of the CheckSum Tool.

Numbers in parentheses mean either SourceForge.net tracker item number (#xxxxxxx)
or Subversion repository revision (rxxx).

CheckSum Tool 0.6.0
  Split code to two additional libraries (SumLib and Utils).
  Allow drag&drop files from Windows Explorer
  Installer: Prevent starting second instance
  Bugfix: Product name was wrong (without space) in About-dialog.

CheckSum Tool 0.5.0 - 2008-04-27 (r217)
  New toolbar/menuitem icons from famfamfam.com (#1883992)
  Ask adding files in all subfolders of the selected folder.
  Save configuration to XML file (window size/position, toolbars)
  Add second toolbar for checksum-related buttons
  New list column named "Size", showing file size.
  Add ProgressBar for showing process progress.
  Improve file size formatting in main window.
  Make configuration XML file more structured.
  Add version number for the configuration file.
  Improve message asking about adding subfolders.
  Change config file folder to %APPDATA%/ChecksumTool/
  Added default config file to the installer.
  Copy default config file to distribution in NAnt build file.
  Bugfix: Fix updating item count in the statusbar.
  Bugfix: NAnt build was broken after adding Src/Settings folder.

CheckSum Tool 0.4.0 - 2008-02-05 (r158)
  Add Select All to Edit-menu (also CTRL+A shortcut key)
  Add Copy -item to Edit-menu (copies checksums to clipboard)
  Add Help / Contributors menu item to main menu for opening contributors list
  Add missing mnemonic characters to menu items
  Show error message for items not having checksum or file not found when verifying
  Allow relative paths in checksum files
  Installer: Include ChangeLog.txt and Contributors.txt in installer.
  Installer: Add version resource info for installer executable file.
  Clarify copyright - it is Kimmo and Ixonos.
  Allow moving and docking of toolbar
  Manual: Mention relative paths shortly in context of saving files.